--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -32,7 +32,7 @@ html {
   background-position: center 0;
   height: 127px;
   position: relative;
-  overflow: hidden;
+  /* overflow-x: hidden; */
 }
 
 .hamburger {
@@ -53,7 +53,7 @@ html {
   height: 2px;
   background: white;
   margin: 3px 0;
-  z-index: 15;
+  /* z-index: 15; */
   transition: all 0.3s ease-in-out;
 }
 
@@ -70,13 +70,17 @@ html {
 .hamburger.open .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
+
+
 .right-menu {
   height: 300px;
   width: 200px;
   background-color: #000;
   position: absolute;
   left: 100%;
+  width: 0px;
   transition: 1s;
+  z-index: 2;
 }
 
 .right-menu ul li {
@@ -84,29 +88,34 @@ html {
 }
 
 .open-menu {
-  left: 74%;
+  left: 61%;
   display: flex;
+  width: 300px;
+  
 }
 .right-menu {
   display: none;
   height: 300px;
+  
 }
 
 @media (max-width: 768px) {
   .right-menu {
     display: block;
-    /* display: flex; */
-    /* left: 30%; */
+    /* display: none; */
+   
   }
+  
 
   /* новый код */
 
   /* новый код */
 
   .toggleMenu {
-    width: 300px;
+    width: 0px;
     height: 300px;
     background-color: black;
+   
   }
 
   .hamburger {
