--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -78,9 +78,10 @@ html {
   background-color: #000;
   position: absolute;
   left: 100%;
-  width: 0px;
+  width: 100px;
   transition: 1s;
   z-index: 2;
+  /* display: none; */
 }
 
 .right-menu ul li {
@@ -91,30 +92,48 @@ html {
   left: 61%;
   display: flex;
   width: 300px;
+  position: absolute;
+  transition: 0.5s
   
 }
 .right-menu {
-  display: none;
+  /* display: none; */
+  left: -700px;
   height: 300px;
+  position: absolute;
+  transition: 0.5s
   
+}
+
+.open{
+  right: 0;
+  transition: 0.5s
 }
 
 @media (max-width: 768px) {
   .right-menu {
-    display: block;
     /* display: none; */
-   
-  }
+    height: 300px;
+    transition: 0.5s
+}
+
   
+.open-menu {
+  left: 61%;
+  display: flex;
+  width: 300px;
+  position: absolute;
+  transition: 0.5s
+  
+}
 
-  /* новый код */
-
-  /* новый код */
 
   .toggleMenu {
     width: 0px;
     height: 300px;
     background-color: black;
+    position: absolute;
+    transition: 0.5s
    
   }
 
@@ -131,12 +150,16 @@ html {
   }
   .nav-link {
     display: none;
+    
   }
+
+ 
 
   .header {
     justify-content: space-around;
     max-width: 768px;
     display: flex;
+    position: relative;
   }
 
   .logo {
