--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -801,28 +801,38 @@ line-height: 88px;
 
 
   .section-title {
-    justify-content: space-around;
-    max-width: 100px;
-    background-image: none;
-    display: flex;
+     
+     width: 364px;
+  margin-left: 202px;
+    
     justify-content: right;
   }
 
   .span {
     justify-content: space-around;
-    max-width: 118px;
+    max-width: 129px;
     justify-content: right;
+    margin-left: 118px;
+    font-size: 33px;
   }
   .span2 {
     justify-content: space-around;
-    max-width: 158px;
+    max-width: 187px;
     justify-content: right;
+    font-size: 33px;
+    margin-left: 89px;
+  }
+  .por{
+    margin-top: 30px;
+    margin-top: 108px;
+    margin-bottom: -8px;
   }
 
-  .spa3 {
+  .span3 {
     justify-content: space-around;
     max-width: 118px;
     justify-content: right;
+    margin-left: 125px;
   }
   .skills {
     justify-content: space-around;
@@ -876,12 +886,28 @@ line-height: 88px;
   }
 
   .span3{
-    line-height: 39px;
+    line-height: 77px;
     font-size: 34px;
   }
+
+  .vid{
+   
+    margin-top: 81px;
+    margin-bottom: 11px;
+  }
   .span4{
-    margin-top: 10px;
+    width: 120px;
+    margin-top: 11px;
     font-size: 34px;
+    margin-left: 122px;
+    font-size: 33px;
+    line-height: 57px;
+  }
+
+  .PR{
+    
+    margin-top: 110px;
+    margin-bottom: -9px;
   }
 
   .price {
