--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -49,7 +49,7 @@ html {
 }
 
 .line {
-  width: 80%;
+  width: 68%;
   height: 2px;
   background: white;
   margin: 3px 0;
@@ -70,6 +70,11 @@ html {
 .hamburger.open .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
+
+/* .line2{
+  margin-top: 8px;
+  margin-bottom: 8px;
+} */
 
 
 .right-menu {
