--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -912,7 +912,7 @@ line-height: 88px;
   }
 
 
-  .S4-2{
+  .S{
     margin-top: -1px;
     margin-left: -44px;
     line-height: 43px;
@@ -957,9 +957,9 @@ line-height: 88px;
     max-width: 768px;
     margin-top: -30px;
     padding-top: 67px;
-    height: 419px;
-    width: 750px;
-    margin-left: 9px;
+    height: 400px;
+    width: 749px;
+    
   }
 
   .span3{
@@ -996,8 +996,8 @@ line-height: 88px;
   }
 
   .play{
-    height: 55px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
   }
 
   .section-contacts {
