--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -53,7 +53,7 @@ html {
   height: 2px;
   background: white;
   margin: 3px 0;
-  /* z-index: 15; */
+ 
   transition: all 0.3s ease-in-out;
 }
 
@@ -110,6 +110,7 @@ html {
 .open {
   right: 0;
   transition: 0.5s;
+  color: ;
 }
 
 .background {
@@ -374,6 +375,7 @@ a:hover {
 .skill-photo .skill-video {
   text-align: center;
 }
+
 
 .skill-description {
   font-size: 18px;
@@ -698,6 +700,7 @@ textarea {
     transition: 0.5s;
     width: 620px;
     position: absolute;
+    
   }
 
   /* .hero{
@@ -713,12 +716,16 @@ textarea {
     position: absolute;
     transition: 0.5s;
     width: 620px;
+    /* background-color: white; */
+    color: black;
   }
 
   .R-men {
     margin-left: 127px;
     padding-top: 134px;
     line-height: 88px;
+    color: #000;
+    
   }
 
   .R1,
@@ -727,6 +734,8 @@ textarea {
   .R4,
   .R5 {
     font-size: 36px;
+    /* color: #fff;
+    color: #000; */
   }
 
   .toggleMenu {
@@ -1096,7 +1105,17 @@ textarea {
 .active-lang {
   color: #bdae82;
 }
+.right-menu-light{
+  background-color: #fff;
+}
 
+.R-light{
+  color: #000;
+}
+
+.line-light{
+  background-color: black;
+}
 /* .btn-light:hover{
   background-color: white;
   color: black;
